Ergonomic improvements : - Prevent horizontal scroll - Making nav aligned with the home button when not in sommaire - Making home_top stop his animation when changing espace

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 #body {
 	/* background-color: black; */
 	z-index: -4;
+	overflow-x: hidden;
 }
 
 #background {
